Again from scratch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Otpgen" />
-        <activity android:name=".Login" />
-        <activity android:name=".SignUp" />
+        <activity android:name=".Login"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".SignUp"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".QRCode" />
         <activity android:name=".GeneratePage" />
         <activity android:name=".MainActivity"></activity>
